JumpScript/tests/baselines/reference/comparisonOperatorWithNoRelationshipPrimitiveType.errors.txt
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(10,12): error TS2365: Operator '<' cannot be applied to types 'number' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(11,12): error TS2365: Operator '<' cannot be applied to types 'number' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(12,12): error TS2365: Operator '<' cannot be applied to types 'number' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(15,12): error TS2365: Operator '<' cannot be applied to types 'boolean' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(16,12): error TS2365: Operator '<' cannot be applied to types 'boolean' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(17,12): error TS2365: Operator '<' cannot be applied to types 'boolean' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(18,12): error TS2365: Operator '<' cannot be applied to types 'boolean' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(20,12): error TS2365: Operator '<' cannot be applied to types 'string' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(21,12): error TS2365: Operator '<' cannot be applied to types 'string' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(22,12): error TS2365: Operator '<' cannot be applied to types 'string' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(23,12): error TS2365: Operator '<' cannot be applied to types 'string' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(25,12): error TS2365: Operator '<' cannot be applied to types 'void' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(26,12): error TS2365: Operator '<' cannot be applied to types 'void' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(27,12): error TS2365: Operator '<' cannot be applied to types 'void' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(28,12): error TS2365: Operator '<' cannot be applied to types 'void' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(31,12): error TS2365: Operator '<' cannot be applied to types 'E' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(32,12): error TS2365: Operator '<' cannot be applied to types 'E' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(33,12): error TS2365: Operator '<' cannot be applied to types 'E' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(36,12): error TS2365: Operator '>' cannot be applied to types 'number' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(37,12): error TS2365: Operator '>' cannot be applied to types 'number' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(38,12): error TS2365: Operator '>' cannot be applied to types 'number' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(41,12): error TS2365: Operator '>' cannot be applied to types 'boolean' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(42,12): error TS2365: Operator '>' cannot be applied to types 'boolean' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(43,12): error TS2365: Operator '>' cannot be applied to types 'boolean' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(44,12): error TS2365: Operator '>' cannot be applied to types 'boolean' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(46,12): error TS2365: Operator '>' cannot be applied to types 'string' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(47,12): error TS2365: Operator '>' cannot be applied to types 'string' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(48,12): error TS2365: Operator '>' cannot be applied to types 'string' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(49,12): error TS2365: Operator '>' cannot be applied to types 'string' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(51,12): error TS2365: Operator '>' cannot be applied to types 'void' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(52,12): error TS2365: Operator '>' cannot be applied to types 'void' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(53,12): error TS2365: Operator '>' cannot be applied to types 'void' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(54,12): error TS2365: Operator '>' cannot be applied to types 'void' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(57,12): error TS2365: Operator '>' cannot be applied to types 'E' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(58,12): error TS2365: Operator '>' cannot be applied to types 'E' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(59,12): error TS2365: Operator '>' cannot be applied to types 'E' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(62,12): error TS2365: Operator '<=' cannot be applied to types 'number' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(63,12): error TS2365: Operator '<=' cannot be applied to types 'number' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(64,12): error TS2365: Operator '<=' cannot be applied to types 'number' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(67,12): error TS2365: Operator '<=' cannot be applied to types 'boolean' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(68,12): error TS2365: Operator '<=' cannot be applied to types 'boolean' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(69,12): error TS2365: Operator '<=' cannot be applied to types 'boolean' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(70,12): error TS2365: Operator '<=' cannot be applied to types 'boolean' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(72,12): error TS2365: Operator '<=' cannot be applied to types 'string' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(73,12): error TS2365: Operator '<=' cannot be applied to types 'string' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(74,12): error TS2365: Operator '<=' cannot be applied to types 'string' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(75,12): error TS2365: Operator '<=' cannot be applied to types 'string' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(77,12): error TS2365: Operator '<=' cannot be applied to types 'void' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(78,12): error TS2365: Operator '<=' cannot be applied to types 'void' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(79,12): error TS2365: Operator '<=' cannot be applied to types 'void' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(80,12): error TS2365: Operator '<=' cannot be applied to types 'void' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(83,12): error TS2365: Operator '<=' cannot be applied to types 'E' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(84,12): error TS2365: Operator '<=' cannot be applied to types 'E' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(85,12): error TS2365: Operator '<=' cannot be applied to types 'E' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(88,12): error TS2365: Operator '>=' cannot be applied to types 'number' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(89,12): error TS2365: Operator '>=' cannot be applied to types 'number' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(90,12): error TS2365: Operator '>=' cannot be applied to types 'number' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(93,12): error TS2365: Operator '>=' cannot be applied to types 'boolean' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(94,12): error TS2365: Operator '>=' cannot be applied to types 'boolean' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(95,12): error TS2365: Operator '>=' cannot be applied to types 'boolean' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(96,12): error TS2365: Operator '>=' cannot be applied to types 'boolean' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(98,12): error TS2365: Operator '>=' cannot be applied to types 'string' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(99,12): error TS2365: Operator '>=' cannot be applied to types 'string' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(100,12): error TS2365: Operator '>=' cannot be applied to types 'string' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(101,12): error TS2365: Operator '>=' cannot be applied to types 'string' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(103,12): error TS2365: Operator '>=' cannot be applied to types 'void' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(104,12): error TS2365: Operator '>=' cannot be applied to types 'void' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(105,12): error TS2365: Operator '>=' cannot be applied to types 'void' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(106,12): error TS2365: Operator '>=' cannot be applied to types 'void' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(109,12): error TS2365: Operator '>=' cannot be applied to types 'E' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(110,12): error TS2365: Operator '>=' cannot be applied to types 'E' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(111,12): error TS2365: Operator '>=' cannot be applied to types 'E' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(114,12): error TS2365: Operator '==' cannot be applied to types 'number' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(115,12): error TS2365: Operator '==' cannot be applied to types 'number' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(116,12): error TS2365: Operator '==' cannot be applied to types 'number' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(119,12): error TS2365: Operator '==' cannot be applied to types 'boolean' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(120,12): error TS2365: Operator '==' cannot be applied to types 'boolean' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(121,12): error TS2365: Operator '==' cannot be applied to types 'boolean' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(122,12): error TS2365: Operator '==' cannot be applied to types 'boolean' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(124,12): error TS2365: Operator '==' cannot be applied to types 'string' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(125,12): error TS2365: Operator '==' cannot be applied to types 'string' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(126,12): error TS2365: Operator '==' cannot be applied to types 'string' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(127,12): error TS2365: Operator '==' cannot be applied to types 'string' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(129,12): error TS2365: Operator '==' cannot be applied to types 'void' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(130,12): error TS2365: Operator '==' cannot be applied to types 'void' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(131,12): error TS2365: Operator '==' cannot be applied to types 'void' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(132,12): error TS2365: Operator '==' cannot be applied to types 'void' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(135,12): error TS2365: Operator '==' cannot be applied to types 'E' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(136,12): error TS2365: Operator '==' cannot be applied to types 'E' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(137,12): error TS2365: Operator '==' cannot be applied to types 'E' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(140,12): error TS2365: Operator '!=' cannot be applied to types 'number' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(141,12): error TS2365: Operator '!=' cannot be applied to types 'number' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(142,12): error TS2365: Operator '!=' cannot be applied to types 'number' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(145,12): error TS2365: Operator '!=' cannot be applied to types 'boolean' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(146,12): error TS2365: Operator '!=' cannot be applied to types 'boolean' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(147,12): error TS2365: Operator '!=' cannot be applied to types 'boolean' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(148,12): error TS2365: Operator '!=' cannot be applied to types 'boolean' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(150,12): error TS2365: Operator '!=' cannot be applied to types 'string' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(151,12): error TS2365: Operator '!=' cannot be applied to types 'string' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(152,12): error TS2365: Operator '!=' cannot be applied to types 'string' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(153,12): error TS2365: Operator '!=' cannot be applied to types 'string' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(155,12): error TS2365: Operator '!=' cannot be applied to types 'void' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(156,12): error TS2365: Operator '!=' cannot be applied to types 'void' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(157,12): error TS2365: Operator '!=' cannot be applied to types 'void' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(158,12): error TS2365: Operator '!=' cannot be applied to types 'void' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(161,12): error TS2365: Operator '!=' cannot be applied to types 'E' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(162,12): error TS2365: Operator '!=' cannot be applied to types 'E' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(163,12): error TS2365: Operator '!=' cannot be applied to types 'E' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(166,12): error TS2365: Operator '===' cannot be applied to types 'number' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(167,12): error TS2365: Operator '===' cannot be applied to types 'number' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(168,12): error TS2365: Operator '===' cannot be applied to types 'number' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(171,12): error TS2365: Operator '===' cannot be applied to types 'boolean' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(172,12): error TS2365: Operator '===' cannot be applied to types 'boolean' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(173,12): error TS2365: Operator '===' cannot be applied to types 'boolean' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(174,12): error TS2365: Operator '===' cannot be applied to types 'boolean' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(176,12): error TS2365: Operator '===' cannot be applied to types 'string' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(177,12): error TS2365: Operator '===' cannot be applied to types 'string' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(178,12): error TS2365: Operator '===' cannot be applied to types 'string' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(179,12): error TS2365: Operator '===' cannot be applied to types 'string' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(181,12): error TS2365: Operator '===' cannot be applied to types 'void' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(182,12): error TS2365: Operator '===' cannot be applied to types 'void' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(183,12): error TS2365: Operator '===' cannot be applied to types 'void' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(184,12): error TS2365: Operator '===' cannot be applied to types 'void' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(187,12): error TS2365: Operator '===' cannot be applied to types 'E' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(188,12): error TS2365: Operator '===' cannot be applied to types 'E' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(189,12): error TS2365: Operator '===' cannot be applied to types 'E' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(192,12): error TS2365: Operator '!==' cannot be applied to types 'number' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(193,12): error TS2365: Operator '!==' cannot be applied to types 'number' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(194,12): error TS2365: Operator '!==' cannot be applied to types 'number' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(197,12): error TS2365: Operator '!==' cannot be applied to types 'boolean' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(198,12): error TS2365: Operator '!==' cannot be applied to types 'boolean' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(199,12): error TS2365: Operator '!==' cannot be applied to types 'boolean' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(200,12): error TS2365: Operator '!==' cannot be applied to types 'boolean' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(202,12): error TS2365: Operator '!==' cannot be applied to types 'string' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(203,12): error TS2365: Operator '!==' cannot be applied to types 'string' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(204,12): error TS2365: Operator '!==' cannot be applied to types 'string' and 'void'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(205,12): error TS2365: Operator '!==' cannot be applied to types 'string' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(207,12): error TS2365: Operator '!==' cannot be applied to types 'void' and 'number'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(208,12): error TS2365: Operator '!==' cannot be applied to types 'void' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(209,12): error TS2365: Operator '!==' cannot be applied to types 'void' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(210,12): error TS2365: Operator '!==' cannot be applied to types 'void' and 'E'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(213,12): error TS2365: Operator '!==' cannot be applied to types 'E' and 'boolean'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(214,12): error TS2365: Operator '!==' cannot be applied to types 'E' and 'string'.
tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump(215,12): error TS2365: Operator '!==' cannot be applied to types 'E' and 'void'.


==== tests/cases/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipPrimitiveType.jump (144 errors) ====
    enum E { a, b, c }
    
    var a: number;
    var b: boolean;
    var c: string;
    var d: void;
    var e: E;
    
    // operator <
    var r1a1 = a < b;
               ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'number' and 'boolean'.
    var r1a1 = a < c;
               ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'number' and 'string'.
    var r1a1 = a < d;
               ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'number' and 'void'.
    var r1a1 = a < e; // no error, expected
    
    var r1b1 = b < a;
               ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'boolean' and 'number'.
    var r1b1 = b < c;
               ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'boolean' and 'string'.
    var r1b1 = b < d;
               ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'boolean' and 'void'.
    var r1b1 = b < e;
               ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'boolean' and 'E'.
    
    var r1c1 = c < a;
               ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'string' and 'number'.
    var r1c1 = c < b;
               ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'string' and 'boolean'.
    var r1c1 = c < d;
               ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'string' and 'void'.
    var r1c1 = c < e;
               ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'string' and 'E'.
    
    var r1d1 = d < a;
               ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'void' and 'number'.
    var r1d1 = d < b;
               ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'void' and 'boolean'.
    var r1d1 = d < c;
               ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'void' and 'string'.
    var r1d1 = d < e;
               ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'void' and 'E'.
    
    var r1e1 = e < a; // no error, expected
    var r1e1 = e < b;
               ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'E' and 'boolean'.
    var r1e1 = e < c;
               ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'E' and 'string'.
    var r1e1 = e < d;
               ~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'E' and 'void'.
    
    // operator >
    var r2a1 = a > b;
               ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'number' and 'boolean'.
    var r2a1 = a > c;
               ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'number' and 'string'.
    var r2a1 = a > d;
               ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'number' and 'void'.
    var r2a1 = a > e; // no error, expected
    
    var r2b1 = b > a;
               ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'boolean' and 'number'.
    var r2b1 = b > c;
               ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'boolean' and 'string'.
    var r2b1 = b > d;
               ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'boolean' and 'void'.
    var r2b1 = b > e;
               ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'boolean' and 'E'.
    
    var r2c1 = c > a;
               ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'string' and 'number'.
    var r2c1 = c > b;
               ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'string' and 'boolean'.
    var r2c1 = c > d;
               ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'string' and 'void'.
    var r2c1 = c > e;
               ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'string' and 'E'.
    
    var r2d1 = d > a;
               ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'void' and 'number'.
    var r2d1 = d > b;
               ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'void' and 'boolean'.
    var r2d1 = d > c;
               ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'void' and 'string'.
    var r2d1 = d > e;
               ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'void' and 'E'.
    
    var r2e1 = e > a; // no error, expected
    var r2e1 = e > b;
               ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'E' and 'boolean'.
    var r2e1 = e > c;
               ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'E' and 'string'.
    var r2e1 = e > d;
               ~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'E' and 'void'.
    
    // operator <=
    var r3a1 = a <= b;
               ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'number' and 'boolean'.
    var r3a1 = a <= c;
               ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'number' and 'string'.
    var r3a1 = a <= d;
               ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'number' and 'void'.
    var r3a1 = a <= e; // no error, expected
    
    var r3b1 = b <= a;
               ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'boolean' and 'number'.
    var r3b1 = b <= c;
               ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'boolean' and 'string'.
    var r3b1 = b <= d;
               ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'boolean' and 'void'.
    var r3b1 = b <= e;
               ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'boolean' and 'E'.
    
    var r3c1 = c <= a;
               ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'string' and 'number'.
    var r3c1 = c <= b;
               ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'string' and 'boolean'.
    var r3c1 = c <= d;
               ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'string' and 'void'.
    var r3c1 = c <= e;
               ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'string' and 'E'.
    
    var r3d1 = d <= a;
               ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'void' and 'number'.
    var r3d1 = d <= b;
               ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'void' and 'boolean'.
    var r3d1 = d <= c;
               ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'void' and 'string'.
    var r3d1 = d <= e;
               ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'void' and 'E'.
    
    var r3e1 = e <= a; // no error, expected
    var r3e1 = e <= b;
               ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'E' and 'boolean'.
    var r3e1 = e <= c;
               ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'E' and 'string'.
    var r3e1 = e <= d;
               ~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'E' and 'void'.
    
    // operator >=
    var r4a1 = a >= b;
               ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'number' and 'boolean'.
    var r4a1 = a >= c;
               ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'number' and 'string'.
    var r4a1 = a >= d;
               ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'number' and 'void'.
    var r4a1 = a >= e; // no error, expected
    
    var r4b1 = b >= a;
               ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'boolean' and 'number'.
    var r4b1 = b >= c;
               ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'boolean' and 'string'.
    var r4b1 = b >= d;
               ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'boolean' and 'void'.
    var r4b1 = b >= e;
               ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'boolean' and 'E'.
    
    var r4c1 = c >= a;
               ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'string' and 'number'.
    var r4c1 = c >= b;
               ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'string' and 'boolean'.
    var r4c1 = c >= d;
               ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'string' and 'void'.
    var r4c1 = c >= e;
               ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'string' and 'E'.
    
    var r4d1 = d >= a;
               ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'void' and 'number'.
    var r4d1 = d >= b;
               ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'void' and 'boolean'.
    var r4d1 = d >= c;
               ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'void' and 'string'.
    var r4d1 = d >= e;
               ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'void' and 'E'.
    
    var r4e1 = e >= a; // no error, expected
    var r4e1 = e >= b;
               ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'E' and 'boolean'.
    var r4e1 = e >= c;
               ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'E' and 'string'.
    var r4e1 = e >= d;
               ~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'E' and 'void'.
    
    // operator ==
    var r5a1 = a == b;
               ~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types 'number' and 'boolean'.
    var r5a1 = a == c;
               ~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types 'number' and 'string'.
    var r5a1 = a == d;
               ~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types 'number' and 'void'.
    var r5a1 = a == e; // no error, expected
    
    var r5b1 = b == a;
               ~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types 'boolean' and 'number'.
    var r5b1 = b == c;
               ~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types 'boolean' and 'string'.
    var r5b1 = b == d;
               ~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types 'boolean' and 'void'.
    var r5b1 = b == e;
               ~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types 'boolean' and 'E'.
    
    var r5c1 = c == a;
               ~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types 'string' and 'number'.
    var r5c1 = c == b;
               ~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types 'string' and 'boolean'.
    var r5c1 = c == d;
               ~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types 'string' and 'void'.
    var r5c1 = c == e;
               ~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types 'string' and 'E'.
    
    var r5d1 = d == a;
               ~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types 'void' and 'number'.
    var r5d1 = d == b;
               ~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types 'void' and 'boolean'.
    var r5d1 = d == c;
               ~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types 'void' and 'string'.
    var r5d1 = d == e;
               ~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types 'void' and 'E'.
    
    var r5e1 = e == a; // no error, expected
    var r5e1 = e == b;
               ~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types 'E' and 'boolean'.
    var r5e1 = e == c;
               ~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types 'E' and 'string'.
    var r5e1 = e == d;
               ~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types 'E' and 'void'.
    
    // operator !=
    var r6a1 = a != b;
               ~~~~~~
!!! error TS2365: Operator '!=' cannot be applied to types 'number' and 'boolean'.
    var r6a1 = a != c;
               ~~~~~~
!!! error TS2365: Operator '!=' cannot be applied to types 'number' and 'string'.
    var r6a1 = a != d;
               ~~~~~~
!!! error TS2365: Operator '!=' cannot be applied to types 'number' and 'void'.
    var r6a1 = a != e; // no error, expected
    
    var r6b1 = b != a;
               ~~~~~~
!!! error TS2365: Operator '!=' cannot be applied to types 'boolean' and 'number'.
    var r6b1 = b != c;
               ~~~~~~
!!! error TS2365: Operator '!=' cannot be applied to types 'boolean' and 'string'.
    var r6b1 = b != d;
               ~~~~~~
!!! error TS2365: Operator '!=' cannot be applied to types 'boolean' and 'void'.
    var r6b1 = b != e;
               ~~~~~~
!!! error TS2365: Operator '!=' cannot be applied to types 'boolean' and 'E'.
    
    var r6c1 = c != a;
               ~~~~~~
!!! error TS2365: Operator '!=' cannot be applied to types 'string' and 'number'.
    var r6c1 = c != b;
               ~~~~~~
!!! error TS2365: Operator '!=' cannot be applied to types 'string' and 'boolean'.
    var r6c1 = c != d;
               ~~~~~~
!!! error TS2365: Operator '!=' cannot be applied to types 'string' and 'void'.
    var r6c1 = c != e;
               ~~~~~~
!!! error TS2365: Operator '!=' cannot be applied to types 'string' and 'E'.
    
    var r6d1 = d != a;
               ~~~~~~
!!! error TS2365: Operator '!=' cannot be applied to types 'void' and 'number'.
    var r6d1 = d != b;
               ~~~~~~
!!! error TS2365: Operator '!=' cannot be applied to types 'void' and 'boolean'.
    var r6d1 = d != c;
               ~~~~~~
!!! error TS2365: Operator '!=' cannot be applied to types 'void' and 'string'.
    var r6d1 = d != e;
               ~~~~~~
!!! error TS2365: Operator '!=' cannot be applied to types 'void' and 'E'.
    
    var r6e1 = e != a; // no error, expected
    var r6e1 = e != b;
               ~~~~~~
!!! error TS2365: Operator '!=' cannot be applied to types 'E' and 'boolean'.
    var r6e1 = e != c;
               ~~~~~~
!!! error TS2365: Operator '!=' cannot be applied to types 'E' and 'string'.
    var r6e1 = e != d;
               ~~~~~~
!!! error TS2365: Operator '!=' cannot be applied to types 'E' and 'void'.
    
    // operator ===
    var r7a1 = a === b;
               ~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'number' and 'boolean'.
    var r7a1 = a === c;
               ~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'number' and 'string'.
    var r7a1 = a === d;
               ~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'number' and 'void'.
    var r7a1 = a === e; // no error, expected
    
    var r7b1 = b === a;
               ~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'boolean' and 'number'.
    var r7b1 = b === c;
               ~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'boolean' and 'string'.
    var r7b1 = b === d;
               ~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'boolean' and 'void'.
    var r7b1 = b === e;
               ~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'boolean' and 'E'.
    
    var r7c1 = c === a;
               ~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'string' and 'number'.
    var r7c1 = c === b;
               ~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'string' and 'boolean'.
    var r7c1 = c === d;
               ~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'string' and 'void'.
    var r7c1 = c === e;
               ~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'string' and 'E'.
    
    var r7d1 = d === a;
               ~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'void' and 'number'.
    var r7d1 = d === b;
               ~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'void' and 'boolean'.
    var r7d1 = d === c;
               ~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'void' and 'string'.
    var r7d1 = d === e;
               ~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'void' and 'E'.
    
    var r7e1 = e === a; // no error, expected
    var r7e1 = e === b;
               ~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'E' and 'boolean'.
    var r7e1 = e === c;
               ~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'E' and 'string'.
    var r7e1 = e === d;
               ~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'E' and 'void'.
    
    // operator !==
    var r8a1 = a !== b;
               ~~~~~~~
!!! error TS2365: Operator '!==' cannot be applied to types 'number' and 'boolean'.
    var r8a1 = a !== c;
               ~~~~~~~
!!! error TS2365: Operator '!==' cannot be applied to types 'number' and 'string'.
    var r8a1 = a !== d;
               ~~~~~~~
!!! error TS2365: Operator '!==' cannot be applied to types 'number' and 'void'.
    var r8a1 = a !== e; // no error, expected
    
    var r8b1 = b !== a;
               ~~~~~~~
!!! error TS2365: Operator '!==' cannot be applied to types 'boolean' and 'number'.
    var r8b1 = b !== c;
               ~~~~~~~
!!! error TS2365: Operator '!==' cannot be applied to types 'boolean' and 'string'.
    var r8b1 = b !== d;
               ~~~~~~~
!!! error TS2365: Operator '!==' cannot be applied to types 'boolean' and 'void'.
    var r8b1 = b !== e;
               ~~~~~~~
!!! error TS2365: Operator '!==' cannot be applied to types 'boolean' and 'E'.
    
    var r8c1 = c !== a;
               ~~~~~~~
!!! error TS2365: Operator '!==' cannot be applied to types 'string' and 'number'.
    var r8c1 = c !== b;
               ~~~~~~~
!!! error TS2365: Operator '!==' cannot be applied to types 'string' and 'boolean'.
    var r8c1 = c !== d;
               ~~~~~~~
!!! error TS2365: Operator '!==' cannot be applied to types 'string' and 'void'.
    var r8c1 = c !== e;
               ~~~~~~~
!!! error TS2365: Operator '!==' cannot be applied to types 'string' and 'E'.
    
    var r8d1 = d !== a;
               ~~~~~~~
!!! error TS2365: Operator '!==' cannot be applied to types 'void' and 'number'.
    var r8d1 = d !== b;
               ~~~~~~~
!!! error TS2365: Operator '!==' cannot be applied to types 'void' and 'boolean'.
    var r8d1 = d !== c;
               ~~~~~~~
!!! error TS2365: Operator '!==' cannot be applied to types 'void' and 'string'.
    var r8d1 = d !== e;
               ~~~~~~~
!!! error TS2365: Operator '!==' cannot be applied to types 'void' and 'E'.
    
    var r8e1 = e !== a; // no error, expected
    var r8e1 = e !== b;
               ~~~~~~~
!!! error TS2365: Operator '!==' cannot be applied to types 'E' and 'boolean'.
    var r8e1 = e !== c;
               ~~~~~~~
!!! error TS2365: Operator '!==' cannot be applied to types 'E' and 'string'.
    var r8e1 = e !== d;
               ~~~~~~~
!!! error TS2365: Operator '!==' cannot be applied to types 'E' and 'void'.